# math

./: .gitignore  Cargo.toml  Makefile  Math.sol  README.md  build.rs  config.yaml  package.json
app/: Cargo.toml
app/src/: lib.rs  math.rs
client/: Cargo.toml  build.rs
client/src/: lib.rs
solidity/: IMath.sol  Math.sol
src/: lib.rs
tests/: gtest.rs
