[workspace]

members = ["client"]


[package]
name = "math"
version = "0.1.0"
edition = "2024"

[dependencies]
math-app = { path = "app" }

[build-dependencies]
math-app = { path = "app" }
sails-rs = { version = "0.8.1", features = ["wasm-builder"] }
sails-idl-gen = "0.8.1"

[dev-dependencies]
math = { path = ".", features = ["wasm-binary"] }
math-client = { path = "client" }
sails-rs = { version = "0.8.1", features = ["gtest"] }
tokio = { version = "1.41", features = ["rt", "macros"] }

[features]
wasm-binary = []
