[package]
name = "math-client"
version = "0.1.0"
edition = "2024"

[dependencies]
mockall = { version = "0.12", optional = true }
sails-rs = "0.7.3"

[build-dependencies]
math-app = { path = "../app" }
sails-client-gen = "0.7.3"
sails-idl-gen = "0.7.3"

[features]
mocks = ["sails-rs/mockall", "dep:mockall"]
